# Ray_Tracing_Renderer

./: CMakeLists.txt  Constants.hpp  Interval.hpp  Light.hpp  README.md  Ray.hpp  Renderer.cpp  Renderer.hpp  Rgb.hpp  Surface.cpp  Surface.hpp  Vec3.hpp  image.ppm  main.cpp
include/: Ray.hpp  Renderer.hpp  Rgb.hpp  Surface.hpp  Vec3.hpp
results/: ball.ppm  cylinder.ppm  torus.ppm  torus_2.ppm
source/: Renderer.cpp  Surface.cpp  main.cpp
